# keystroke

./: CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  GOAL.md  README.md  main.cpp  version.h.in
.github/: CONTRIBUTING.md
